  - lmsd/cutoff: added 'use_customerassignments' option (alec)
  - improved page navigation ergonomy in chooseip window (chilan)
  - added "disable network" functionality in LMSUI and lms-makedhcpconf (chilan)
  - added "trivial" vlan support in lms-makedhcpconf (chilan)
  - lmsd/dhcp: added "trivial" vlan support (alec)
  - tariffs: added possibility to clone tariffs data (alec)
  - don't overwrite invoice's creation time on edit if date wasn't changed (alec)
  - invoiceedit: we can copy item content to edit fields clicking mouse button (chilan)
  - lms-reminder: use Mail::Sender with smtp auth (alec)
  - removed english manual in one html file (alec)
  - added polish manual in plain text format (alec)

version 1.11.3 Quetesh (2008-03-26):

  - fixed 'suspended' filter on customers list (alec)
  - added option phpui.printer_window which enables onload="window.print()"
    for html printouts, allowed values: 'invoice', 'receipt', 'report' (alec)
  - fixed problem with one before last address name in chooseip page (alec)
  - polish documentation converted to utf8 (alec)
  - added customer ID in footer of heldesk notifications with enabled option
    phpui.helpdesk_customerinfo (alec)
  - in quicksearch searching ID columns by '=' not LIKE operator (alec)
  - added int2txt() SQL function designed for postgresql 8.3 compatybility, it
    needs int-to-text type casting when using LIKE operator with numeric 
    columns (alec)
  - receiptadd: we always show last 10 REALLY not accounted invoices (chilan)
  - invoicenew: we choose last invoice number according to selected month (chilan)
  - we can set incorrect SSN and TEN for customers if we wish it (chilan)
  - hosting: menu Accounts renamed to Hosting (alec)
  - hosting: domain for account is required now (alec)
  - hosting: added possibility to create multi-destination aliases (alec) 
  - hosting: on Domains List added assigned accounts number (alec)
  - hosting: improved interface, added info, delete links (alec)